--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -76,29 +76,60 @@
     /* Navegação por abas */
     .tabs {
       display: flex;
-      gap: 8px;
-      margin-bottom: 24px;
-      background-color: #1e1e1e;
-      border-radius: 12px;
-      padding: 4px;
+      gap: 12px;
+      margin-bottom: 30px;
+      background: rgba(30, 41, 59, 0.8);
+      border-radius: 16px;
+      padding: 8px;
       overflow-x: auto;
+      border: 1px solid rgba(99, 102, 241, 0.1);
     }
 
     .tab-button {
-      padding: 10px 16px;
+      padding: 12px 20px;
       border: none;
-      background: none;
-      color: #888;
-      border-radius: 8px;
+      background: transparent;
+      color: rgba(255, 255, 255, 0.6);
+      border-radius: 12px;
       cursor: pointer;
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 10px;
       flex: 1;
       justify-content: center;
-      transition: all 0.2s ease;
+      transition: all 0.3s ease;
       font-weight: 500;
-      min-width: 120px;
+      min-width: 140px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .tab-button.active {
+      background: linear-gradient(135deg, rgba(99, 102, 241, 0.2), rgba(139, 92, 246, 0.2));
+      color: #fff;
+      box-shadow: 0 4px 12px rgba(99, 102, 241, 0.2);
+    }
+
+    .tab-button:hover:not(.active) {
+      background: rgba(99, 102, 241, 0.1);
+      color: rgba(255, 255, 255, 0.8);
+    }
+
+    .tab-button::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 0;
+      height: 2px;
+      background: linear-gradient(90deg, #6366f1, #8b5cf6);
+      transition: all 0.3s ease;
+      transform: translateX(-50%);
+    }
+
+    .tab-button:hover::after,
+    .tab-button.active::after {
+      width: 80%;
     }
 
     .tab-button.active {
@@ -163,23 +194,70 @@
     input,
     select {
       width: 100%;
-      padding: 12px 16px;
-      border: 1px solid #333;
-      border-radius: 8px;
-      background-color: #252525;
-      color: #e0e0e0;
-      font-size: 14px;
-      transition: border-color 0.2s;
+      padding: 15px 20px;
+      border: 1px solid rgba(99, 102, 241, 0.2);
+      border-radius: 12px;
+      background-color: rgba(30, 41, 59, 0.8);
+      color: #fff;
+      font-size: 15px;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(8px);
     }
 
     input:focus,
     select:focus {
-      border-color: #bb86fc;
+      border-color: #6366f1;
+      box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.2);
       outline: none;
+      background-color: rgba(30, 41, 59, 0.95);
     }
 
     input::placeholder {
-      color: #666;
+      color: rgba(255, 255, 255, 0.4);
+    }
+
+    .form-group {
+      margin-bottom: 24px;
+      position: relative;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 10px;
+      font-weight: 500;
+      color: rgba(255, 255, 255, 0.8);
+      font-size: 0.95rem;
+      letter-spacing: 0.5px;
+    }
+
+    .tab-content {
+      display: none;
+      background: rgba(30, 41, 59, 0.95);
+      border-radius: 20px;
+      padding: 30px;
+      margin-bottom: 30px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      animation: fadeIn 0.5s ease;
+      border: 1px solid rgba(99, 102, 241, 0.1);
+    }
+
+    .summary-item {
+      padding: 24px;
+      border-radius: 16px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      background: rgba(30, 41, 59, 0.8);
+      border: 1px solid rgba(99, 102, 241, 0.1);
+      transition: all 0.3s ease;
+      backdrop-filter: blur(8px);
+    }
+
+    .summary-item:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+      border-color: rgba(99, 102, 241, 0.3);
     }
 
     .calculated-result {
