--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -373,12 +373,113 @@
 
     /* Gráfico */
     .chart-container {
-      background: rgba(30, 30, 30, 0.8);
+      background: linear-gradient(to bottom right, rgba(30, 41, 59, 0.95), rgba(15, 23, 42, 0.95));
       border-radius: 16px;
-      padding: 20px;
+      padding: 24px;
       margin-bottom: 3rem;
       min-height: 400px;
       height: 400px;
+      border: 1px solid rgba(187, 134, 252, 0.1);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .chart-tooltip {
+      background: rgba(30, 41, 59, 0.95);
+      border: 1px solid rgba(187, 134, 252, 0.2);
+      border-radius: 8px;
+      padding: 8px 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      font-size: 14px;
+      color: #fff;
+    }
+
+    .chart-legend {
+      display: flex;
+      gap: 16px;
+      flex-wrap: wrap;
+      margin-top: 16px;
+      padding: 12px;
+      background: rgba(15, 23, 42, 0.5);
+      border-radius: 8px;
+    }
+
+    .legend-item {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.8);
+    }
+
+    .form-actions {
+      display: flex;
+      justify-content: flex-end;
+      gap: 12px;
+      margin-top: 24px;
+      padding: 16px;
+      background: rgba(15, 23, 42, 0.5);
+      border-radius: 12px;
+      border: 1px solid rgba(187, 134, 252, 0.1);
+    }
+
+    .apply-button {
+      background: linear-gradient(135deg, #bb86fc, #9d4edd);
+      color: #fff;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-size: 14px;
+    }
+
+    .apply-button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(187, 134, 252, 0.3);
+    }
+
+    .chart-container::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 1px;
+      background: linear-gradient(90deg, transparent, rgba(187, 134, 252, 0.2), transparent);
+    }
+
+    .chart-title {
+      margin-bottom: 20px;
+      color: #bb86fc;
+      font-size: 18px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+    }
+
+    .chart-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 24px;
+      padding-bottom: 16px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .container {
+      background: rgba(30, 41, 59, 0.95);
+      backdrop-filter: blur(12px);
+      border-radius: 24px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      max-width: 100%;
+      padding: 24px;
+      margin: 24px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      position: relative;
     }
 
     .chart-title {
