--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -498,40 +498,66 @@
 
     .period-selector {
       display: flex;
-      gap: 10px;
-      background: rgba(0, 0, 0, 0.2);
-      padding: 8px;
-      border-radius: 8px;
+      gap: 0.5rem;
+      background: rgba(30, 41, 59, 0.5);
+      padding: 0.5rem;
+      border-radius: 12px;
+      border: 1px solid rgba(99, 102, 241, 0.1);
     }
 
     .period-button {
-      padding: 6px 12px;
+      padding: 0.5rem 1rem;
       border: none;
-      border-radius: 6px;
       background: transparent;
-      color: #b0b0b0;
+      color: rgba(255, 255, 255, 0.6);
+      border-radius: 8px;
       cursor: pointer;
       transition: all 0.3s ease;
+      font-weight: 500;
     }
 
+    .period-button:hover,
     .period-button.active {
-      background: #bb86fc;
-      color: #1e1e1e;
+      background: linear-gradient(135deg, rgba(187, 134, 252, 0.2), rgba(157, 78, 221, 0.2));
+      color: #fff;
+      box-shadow: 0 2px 8px rgba(187, 134, 252, 0.2);
     }
 
     .date-range-selector {
       display: flex;
-      gap: 10px;
       align-items: center;
-      margin-left: 20px;
+      gap: 0.75rem;
+      background: rgba(30, 41, 59, 0.5);
+      padding: 0.5rem 1rem;
+      border-radius: 12px;
+      border: 1px solid rgba(99, 102, 241, 0.1);
     }
 
     .date-input {
-      background: rgba(0, 0, 0, 0.2);
-      border: 1px solid #bb86fc;
-      border-radius: 6px;
-      color: #e0e0e0;
-      padding: 6px 12px;
+      background: rgba(15, 23, 42, 0.5);
+      border: 1px solid rgba(99, 102, 241, 0.1);
+      border-radius: 8px;
+      color: #fff;
+      padding: 0.5rem;
+      font-size: 0.875rem;
+    }
+
+    #apply-range {
+      display: inline-flex;
+      align-items: center;
+      background: linear-gradient(135deg, #bb86fc, #9d4edd);
+      color: #fff;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 500;
+      transition: all 0.3s ease;
+    }
+
+    #apply-range:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(187, 134, 252, 0.3);
     }
 
     /* Lista de apostas */
@@ -846,14 +872,14 @@
 
         <!-- Gráfico -->
         <div class="chart-container">
-          <h3 class="chart-title">Desempenho (7 dias)</h3>
+          <h3 class="chart-title" id="chart-period-title">Desempenho (7 dias)</h3>
           <div class="chart-header">
             <div class="period-selector">
-              <button class="period-button active" data-days="7">7D</button>
-              <button class="period-button" data-days="15">15D</button>
-              <button class="period-button" data-days="30">30D</button>
-              <button class="period-button" data-days="45">45D</button>
-              <button class="period-button" data-days="60">60D</button>
+              <button class="period-button active" data-days="7" onclick="updateChartPeriod(7)">7D</button>
+              <button class="period-button" data-days="15" onclick="updateChartPeriod(15)">15D</button>
+              <button class="period-button" data-days="30" onclick="updateChartPeriod(30)">30D</button>
+              <button class="period-button" data-days="45" onclick="updateChartPeriod(45)">45D</button>
+              <button class="period-button" data-days="60" onclick="updateChartPeriod(60)">60D</button>
             </div>
             <div class="date-range-selector">
               <input type="date" class="date-input" id="start-date">
