--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -375,14 +375,18 @@
     .chart-container {
       background: linear-gradient(to bottom right, rgba(30, 41, 59, 0.95), rgba(15, 23, 42, 0.95));
       border-radius: 16px;
-      padding: 24px;
-      margin-bottom: 3rem;
-      min-height: 400px;
-      height: 400px;
+      padding: 32px;
+      margin: 2rem auto;
+      width: 100%;
+      max-width: 1200px;
+      aspect-ratio: 16/9;
       border: 1px solid rgba(187, 134, 252, 0.1);
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
       position: relative;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .chart-tooltip {
