--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -479,6 +479,39 @@
       border: 1px solid rgba(99, 102, 241, 0.1);
     }
 
+    .chart-container {
+      height: auto;
+      min-height: 400px;
+      margin-bottom: 3rem;
+    }
+
+    .chart-container canvas {
+      width: 100% !important;
+      max-height: 400px;
+    }
+
+    @media (max-width: 768px) {
+      .chart-container {
+        min-height: 350px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .chart-container {
+        min-height: 300px;
+      }
+    }
+
+    .period-button {
+      min-width: 40px;
+      text-align: center;
+    }
+
+    .period-button.active {
+      background: linear-gradient(135deg, rgba(99, 102, 241, 0.25), rgba(139, 92, 246, 0.25));
+      font-weight: 600;
+    }
+
     .date-input {
       background: rgba(15, 23, 42, 0.7);
       border: 1px solid rgba(99, 102, 241, 0.1);
