--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -383,16 +383,11 @@
 
     /* Gráfico */
     .chart-container {
-      background: linear-gradient(to bottom right, rgba(15, 23, 42, 0.95), rgba(15, 23, 42, 0.98));
+      background: rgba(30, 41, 59, 0.95);
       border-radius: var(--radius-lg);
-      padding: 1.5rem;
-      margin: 2rem auto;
-      width: 100%;
-      height: 400px;
-      border: 1px solid rgba(99, 102, 241, 0.1);
-      box-shadow: var(--shadow-lg);
-      position: relative;
-      overflow: hidden;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      border: 1px solid var(--color-border);
     }
 
     .chart-tooltip {
@@ -425,29 +420,30 @@
     }
 
     .chart-title {
-      margin-bottom: 1.25rem;
-      color: var(--color-text-secondary);
-      font-size: 1.125rem;
+      font-size: 1.5rem;
       font-weight: 600;
-      letter-spacing: 0.5px;
+      margin-bottom: 1.5rem;
+      color: var(--color-text-primary);
+      text-align: center;
     }
 
     .chart-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 1.5rem;
-      padding-bottom: 1rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      gap: 1.5rem;
+      margin-bottom: 2rem;
+      flex-wrap: wrap;
     }
 
     .period-selector {
       display: flex;
-      gap: 0.25rem;
+      gap: 0.5rem;
       background: rgba(15, 23, 42, 0.5);
-      padding: 0.375rem;
+      padding: 0.5rem;
       border-radius: var(--radius-sm);
       border: 1px solid rgba(99, 102, 241, 0.1);
+      flex-wrap: nowrap;
     }
 
     .period-button {
@@ -472,12 +468,11 @@
     .date-range-selector {
       display: flex;
       align-items: center;
-      gap: 0.75rem;
+      gap: 1rem;
       background: rgba(15, 23, 42, 0.5);
-      padding: 0.5rem 1rem;
+      padding: 0.75rem 1rem;
       border-radius: var(--radius-sm);
       border: 1px solid rgba(99, 102, 241, 0.1);
-      flex-wrap: wrap;
     }
 
     .chart-container {
@@ -514,9 +509,9 @@
     }
 
     .date-input {
-      background: rgba(15, 23, 42, 0.7);
-      border: 1px solid rgba(99, 102, 241, 0.1);
-      border-radius: 6px;
+      background: rgba(15, 23, 42, 0.5);
+      border: 1px solid rgba(99, 102, 241, 0.2);
+      border-radius: var(--radius-sm);
       color: var(--color-text-primary);
       padding: 0.5rem;
       font-size: 0.875rem;
@@ -1858,6 +1853,12 @@
           // Remove active de todos os botões de período
           document.querySelectorAll('.period-button').forEach(btn =>
             btn.classList.remove('active'));
+
+          // Update chart title with custom date range
+          const start = new Date(startDate);
+          const end = new Date(endDate);
+          document.getElementById('chart-period-title').textContent =
+            `Desempenho (${start.toLocaleDateString()} - ${end.toLocaleDateString()})`;
 
           criarGrafico(null, startDate, endDate);
         } else {
