--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -50,22 +50,23 @@
 
     /* Layout e containers */
     .app-container {
-      max-width: 1200px;
-      margin: 2rem auto;
-      padding: 0 1.5rem;
+      max-width: 1400px;
+      margin: 3rem auto;
+      padding: 0 2rem;
     }
 
     .container {
-      background: rgba(30, 41, 59, 0.95);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      background: rgba(30, 41, 59, 0.98);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
       border-radius: var(--radius-lg);
       box-shadow: var(--shadow-lg);
-      padding: 2rem;
-      margin-bottom: 2rem;
+      padding: 2.5rem;
+      margin-bottom: 3rem;
       border: 1px solid var(--color-border);
       position: relative;
       overflow: hidden;
+      transition: transform 0.3s ease;
     }
 
     .container::before {
@@ -232,31 +233,32 @@
 
     /* Formulário */
     .form-group {
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
       position: relative;
     }
 
     label {
       display: block;
-      margin-bottom: 0.625rem;
-      font-weight: 500;
+      margin-bottom: 0.75rem;
+      font-weight: 600;
       color: var(--color-text-secondary);
       font-size: 0.95rem;
-      letter-spacing: 0.5px;
+      letter-spacing: 0.01em;
     }
 
     input,
     select {
       width: 100%;
-      padding: 0.875rem 1.25rem;
+      padding: 0.875rem 1.125rem;
       border: 1px solid rgba(99, 102, 241, 0.2);
       border-radius: var(--radius-md);
-      background-color: rgba(15, 23, 42, 0.5);
+      background-color: rgba(15, 23, 42, 0.7);
       color: var(--color-text-primary);
       font-size: 1rem;
       transition: var(--transition);
       backdrop-filter: blur(8px);
       -webkit-backdrop-filter: blur(8px);
+      box-shadow: var(--shadow-sm);
     }
 
     input:focus,
@@ -273,7 +275,7 @@
 
     .submit-button {
       width: 100%;
-      padding: 1rem 1.5rem;
+      padding: 0.875rem 1.75rem;
       border: none;
       border-radius: var(--radius-md);
       background: linear-gradient(135deg, var(--color-primary), var(--color-secondary));
@@ -283,8 +285,8 @@
       transition: var(--transition);
       position: relative;
       overflow: hidden;
-      letter-spacing: 0.5px;
-      font-size: 1rem;
+      letter-spacing: 0.01em;
+      font-size: 0.95rem;
       box-shadow: var(--shadow-sm);
     }
 
@@ -383,11 +385,13 @@
 
     /* Gráfico */
     .chart-container {
-      background: rgba(30, 41, 59, 0.95);
+      background: rgba(30, 41, 59, 0.98);
       border-radius: var(--radius-lg);
-      padding: 2rem;
-      margin-bottom: 2rem;
+      padding: 2.5rem;
+      margin: 2.5rem auto;
       border: 1px solid var(--color-border);
+      box-shadow: var(--shadow-md);
+      max-width: 1200px;
     }
 
     .chart-tooltip {
@@ -438,12 +442,13 @@
 
     .period-selector {
       display: flex;
-      gap: 0.5rem;
-      background: rgba(15, 23, 42, 0.5);
-      padding: 0.5rem;
-      border-radius: var(--radius-sm);
-      border: 1px solid rgba(99, 102, 241, 0.1);
+      gap: 0.75rem;
+      background: rgba(15, 23, 42, 0.7);
+      padding: 0.75rem;
+      border-radius: var(--radius-md);
+      border: 1px solid rgba(99, 102, 241, 0.2);
       flex-wrap: nowrap;
+      box-shadow: var(--shadow-sm);
     }
 
     .period-button {
@@ -1465,6 +1470,8 @@
         btn.classList.remove('active');
         if (btn.dataset.days == days) {
           btn.classList.add('active');
+          // Update chart title with the selected period
+          document.getElementById('chart-period-title').textContent = `Desempenho (${days} dias)`;
         }
       });
 
