--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -15,18 +15,18 @@
     }
 
     :root {
-      --color-primary: #00ff00;
-      --color-primary-light: #33ff33;
-      --color-primary-dark: #00cc00;
-      --color-secondary: #00cc00;
-      --color-secondary-light: #33ff33;
-      --color-accent: #00ff00;
-      --color-accent-light: #33ff33;
+      --color-primary: #6366f1;
+      --color-primary-light: #818cf8;
+      --color-primary-dark: #4f46e5;
+      --color-secondary: #8b5cf6;
+      --color-secondary-light: #a78bfa;
+      --color-accent: #10b981;
+      --color-accent-light: #34d399;
       --color-danger: #ef4444;
       --color-danger-light: #f87171;
-      --color-bg-dark: #000000;
-      --color-bg-medium: #111111;
-      --color-bg-light: #222222;
+      --color-bg-dark: #0f172a;
+      --color-bg-medium: #1e293b;
+      --color-bg-light: #334155;
       --color-text-primary: #f8fafc;
       --color-text-secondary: #cbd5e1;
       --color-text-tertiary: #94a3b8;
