--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -1140,12 +1140,54 @@
             const h2hStatsHTML = `
                 <div class="metrics-container">
                     <div class="metrics-column">
-                        <h2 class="section-stats-title">Estatísticas HT</h2>
-                        <!-- Half-time statistics content -->
+                        <h3>Estatísticas HT</h3>
+                        <div class="stats-grid">
+                            <div class="h2h-stat-card">
+                                <h4>Over 1.5 HT</h4>
+                                <div class="h2h-stat-value">${((stats.over1_5HT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.over1_5HT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>Over 2.5 HT</h4>
+                                <div class="h2h-stat-value">${((stats.over2_5HT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.over2_5HT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>BTTS HT</h4>
+                                <div class="h2h-stat-value">${((stats.bttsHT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.bttsHT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>Média Gols HT</h4>
+                                <div class="h2h-stat-value">${(stats.totalGoalsHT / totalGames).toFixed(2)}</div>
+                                <p>Total: ${stats.totalGoalsHT} gols</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="probability-section">
-                        <h2 class="section-stats-title">Estatísticas FT</h2>
-                        <!-- Full-time statistics content -->
+                    <div class="metrics-column">
+                        <h3>Estatísticas FT</h3>
+                        <div class="stats-grid">
+                            <div class="h2h-stat-card">
+                                <h4>Over 2.5 FT</h4>
+                                <div class="h2h-stat-value">${((stats.over2_5FT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.over2_5FT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>Over 3.5 FT</h4>
+                                <div class="h2h-stat-value">${((stats.over3_5FT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.over3_5FT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>BTTS FT</h4>
+                                <div class="h2h-stat-value">${((stats.bttsFT / totalGames) * 100).toFixed(1)}%</div>
+                                <p>Em ${stats.bttsFT} de ${totalGames} jogos</p>
+                            </div>
+                            <div class="h2h-stat-card">
+                                <h4>Média Gols FT</h4>
+                                <div class="h2h-stat-value">${(stats.totalGoalsFT / totalGames).toFixed(2)}</div>
+                                <p>Total: ${stats.totalGoalsFT} gols</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             `;
